logs/django-xauth.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_xauth-0.0.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xauth'...
Listing './lib/python3.5/site-packages/xauth/locale'...
Listing './lib/python3.5/site-packages/xauth/locale/ru'...
Listing './lib/python3.5/site-packages/xauth/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/xauth/management'...
Listing './lib/python3.5/site-packages/xauth/management/commands'...
Compiling './lib/python3.5/site-packages/xauth/management/commands/xauth_import.py'...
***   File "./lib/python3.5/site-packages/xauth/management/commands/xauth_import.py", line 23
    print 'Uknown provider: %s' % provider
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xauth/service'...
Listing './lib/python3.5/site-packages/xauth/service/oauth1'...
Listing './lib/python3.5/site-packages/xauth/service/oauth2'...
Compiling './lib/python3.5/site-packages/xauth/service/oauth2/views.py'...
***   File "./lib/python3.5/site-packages/xauth/service/oauth2/views.py", line 90
    except AccessTokenRequestError, ex:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xauth/service/openid'...
Listing './lib/python3.5/site-packages/xauth/service/openid/commands'...
Compiling './lib/python3.5/site-packages/xauth/service/openid/views.py'...
***   File "./lib/python3.5/site-packages/xauth/service/openid/views.py", line 56
    except DiscoveryFailure, ex:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xauth/service/simple'...
Listing './lib/python3.5/site-packages/xauth/templates'...
Listing './lib/python3.5/site-packages/xauth/templates/xauth'...
Listing './lib/python3.5/site-packages/xauth/templates/xauth/openid'...
Listing './lib/python3.5/site-packages/xauth/templates/xauth/simple'...
Listing './share'...
Listing './share/python-wheels'...
